--- a/templates/santa/participants.html.twig
+++ b/templates/santa/participants.html.twig
@@ -156,7 +156,10 @@
                     }
 
                     summaryCount.innerHTML = users.length + (users.length <= 1 ?' person' : ' people');
-                    checkedUsersSummary.innerHTML = html;
+                    checkedUsersSummary.innerHTML = html
+                    html = checkedUsersSummary.innerText
+                    checkedUsersSummary.innerHTML = html
+
                 }
 
                 /**
