--- a/templates/santa/application/participants_slack.html.twig
+++ b/templates/santa/application/participants_slack.html.twig
@@ -21,17 +21,11 @@
             data-search-index="{{ user.name ~ ' ' ~ user.extra.nickname }}"
     >
 
-        {{ form_widget(userForm, (user.identifier in selectedUsers ?
-            {'attr': {
-                'checked': 'checked',
-                'data-summary': current.userSummary(user)|escape('html_attr'),
-                'identifier': user.identifier
-            }} :
-            {'attr': {
+        {{ form_widget(userForm, {'attr': {
                 'data-summary': current.userSummary(user)|escape('html_attr'),
                 'identifier': user.identifier
             }}
-        )) }}
+        ) }}
         <img src="{{ user.extra.image }}" alt="{{ user.name }}"/>
         <span>{{ user.name }} ({{ user.extra.nickname }})</span>
         {% if groups %}
