--- a/templates/santa/message.html.twig
+++ b/templates/santa/message.html.twig
@@ -14,8 +14,11 @@
 
         <h2>Customize the private messages</h2>
 
-        {% if errors %}
-            <span class="error"><i class="fas fa-exclamation-triangle"></i> {{ errors|join('<br />')|raw }}</span>
+        {% if not form.vars.valid %}
+        <span class="error">
+            <i class="fas fa-exclamation-triangle"></i>
+            {%  for error in form.vars.errors %}<br>{{ error.message }} {% endfor %}
+        </span>
         {% endif %}
 
         <div class="message-field message-step">
@@ -193,7 +196,6 @@
 
         window.addEventListener('load', function () {
             fieldLengths.forEach(function (fieldLength) {
-                console.log('[field=' + fieldLength.getAttribute("data-length-field") + ']')
                 const field = document.querySelector('[field=' + fieldLength.getAttribute("data-length-field") + ']')
                 field.addEventListener('keyup', function () {
                     updateFieldLength(field, fieldLength)
