--- a/templates/santa/application/participants_zoom.html.twig
+++ b/templates/santa/application/participants_zoom.html.twig
@@ -38,11 +38,18 @@
             for="user-{{ user.identifier }}"
             data-search-index="{{ user.name }}"
     >
-        {{ form_widget(userForm, {'attr': {
-                'data-summary': current.userSummary(user)|escape('html_attr'),
+        {{ form_widget(userForm, (user.identifier in selectedUsers ?
+            {'attr': {
+                'checked': 'checked',
+                'data-summary': current.userSummary(user)),
+                'identifier': user.identifier
+            }} :
+            {'attr': {
+                'data-summary': current.userSummary(user)),
                 'identifier': user.identifier
             }}
-        ) }}
+        )) }}
+
         {% if user.extra.image %}
             <img src="{{ user.extra.image }}" alt="{{ user.name }}" />
         {% endif %}
