Apply reviewer fixes

--- a/templates/santa/application/participants_zoom.html.twig
+++ b/templates/santa/application/participants_zoom.html.twig
@@ -9,7 +9,8 @@
         <p class="error" style="width: 80%; margin: 10px auto; text-align: center;">
             Please be aware that Zoom.us support is in beta right now.<br>
             Also, the Linux Zoom client does not display messages correctly.<br>
-            Help us by reporting any suspicious behavior <a href="https://github.com/jolicode/secret-santa">on Github</a>
+            Help us by reporting any suspicious behavior <a href="https://github.com/jolicode/secret-santa">on
+                Github</a>
             or via <a href="mailto:hello@secret-santa.team">email</a>!
         </p>
     </div>
@@ -25,7 +26,7 @@
 {% macro userSummary(user) %}
     <span class="user-summary">
         {% if user.extra.image %}
-            <img src="{{ user.extra.image }}" alt="" />
+            <img src="{{ user.extra.image }}" alt=""/>
         {% endif %}
         <span>{{ user.name }}</span>
         <span data-uncheck-user="user-{{ user.identifier }}" class="fas fa-times" title="Unselect this user"></span>
@@ -38,20 +39,14 @@
             for="user-{{ user.identifier }}"
             data-search-index="{{ user.name }}"
     >
-        {{ form_widget(userForm, (user.identifier in selectedUsers ?
-            {'attr': {
-                'checked': 'checked',
-                'data-summary': current.userSummary(user)),
-                'identifier': user.identifier
-            }} :
-            {'attr': {
-                'data-summary': current.userSummary(user)),
-                'identifier': user.identifier
-            }}
-        )) }}
+        {{ form_widget(userForm, {'attr': {
+            'data-summary': current.userSummary(user)|escape('html_attr'),
+            'identifier': user.identifier
+        }}
+        ) }}
 
         {% if user.extra.image %}
-            <img src="{{ user.extra.image }}" alt="{{ user.name }}" />
+            <img src="{{ user.extra.image }}" alt="{{ user.name }}"/>
         {% endif %}
         <span>{{ user.name }}</span>
         {% if groups %}
