Add og image for social preview card

--- a/templates/_seo.html.twig
+++ b/templates/_seo.html.twig
@@ -8,3 +8,6 @@
 <meta property="og:title" content="{{ title }}" />
 <meta property="og:description" content="{{ description }}" />
 <meta property="og:url" content="{{ app.request.uri }}" />
+<meta property="og:image" content="/og-cover.png" />
+<meta property="og:image:alt" content="{{ title }}">
+<meta name="twitter:card" content="summary_large_image">
