--- a/templates/santa/application/participants_zoom.html.twig
+++ b/templates/santa/application/participants_zoom.html.twig
@@ -40,8 +40,8 @@
             data-search-index="{{ user.name }}"
     >
         {{ form_widget(userForm, {'attr': {
-            'data-summary': current.userSummary(user)|escape('html_attr'),
-            'identifier': user.identifier
+            'data-summary': current.userSummary(user)|escape('html_attr')|raw,
+            'data-identifier': user.identifier
         }}
         ) }}
 
