--- a/templates/santa/application/participants_zoom.html.twig
+++ b/templates/santa/application/participants_zoom.html.twig
@@ -39,11 +39,15 @@
             for="user-{{ user.identifier }}"
             data-search-index="{{ user.name }}"
     >
-        {{ form_widget(userForm, {'attr': {
-            'data-summary': current.userSummary(user)|escape('html_attr')|raw,
-            'data-identifier': user.identifier
-        }}
-        ) }}
+        <div class="data-summary"
+             data-summary="{{ current.userSummary(user)|escape('html_attr')|raw }}"
+             data-identifier=""{{ user.identifier }}>
+            {{ form_widget(userForm, {'attr': {
+                'data-summary': current.userSummary(user)|escape('html_attr')|raw,
+                'data-identifier': user.identifier
+            }}
+            ) }}
+        </div>
 
         {% if user.extra.image %}
             <img src="{{ user.extra.image }}" alt="{{ user.name }}"/>
