--- a/templates/santa/application/participants_slack.html.twig
+++ b/templates/santa/application/participants_slack.html.twig
@@ -21,11 +21,16 @@
             data-search-index="{{ user.name ~ ' ' ~ user.extra.nickname }}"
     >
 
-        {{ form_widget(userForm, {'attr': {
+
+        <div class="data-summary"
+             data-summary="{{ current.userSummary(user)|escape('html_attr')|raw }}"
+             data-identifier=""{{ user.identifier }}>
+            {{ form_widget(userForm, {'attr': {
                 'data-summary': current.userSummary(user)|escape('html_attr')|raw,
                 'data-identifier': user.identifier
             }}
-        ) }}
+            ) }}
+        </div>
         <img src="{{ user.extra.image }}" alt="{{ user.name }}"/>
         <span>{{ user.name }} ({{ user.extra.nickname }})</span>
         {% if groups %}
