--- a/templates/santa/participants.html.twig
+++ b/templates/santa/participants.html.twig
@@ -150,11 +150,12 @@
                  */
                 function updateSummary() {
                     const users = userList.querySelectorAll('.user-item input:checked');
+
                     let html = '';
 
                     if (users.length > 0) {
                         for(let i=0; i<users.length; i++) {
-                            html += users[i].dataset.summary;
+                            html += users[i].parentElement.dataset.summary;
                         }
                     } else {
                         html = 'No user selected';
