--- a/templates/santa/application/participants_discord.html.twig
+++ b/templates/santa/application/participants_discord.html.twig
@@ -22,10 +22,8 @@
     >
 
         <div class="data-summary"
-             data-summary="{{ current.userSummary(user)|escape('html_attr')|raw }}"
-             data-identifier=""{{ user.identifier }}>
+             data-summary="{{ current.userSummary(user)|escape('html_attr')|raw }}">
             {{ form_widget(userForm, {'attr': {
-                'data-summary': current.userSummary(user)|escape('html_attr')|raw,
                 'data-identifier': user.identifier
             }}
             ) }}
