--- a/templates/santa/message.html.twig
+++ b/templates/santa/message.html.twig
@@ -4,19 +4,27 @@
 
 {% block santa_content %}
     <div class="run-block">
-        <form method="post" id="run_form" action="{{ path('message', { application: application }) }}">
+        {{ form_start(form, {
+            'attr': {'id': 'run_form'},
+            'method': 'POST',
+            'action': path('message', { application: application })
+            }) }}
             {# Prevent implicit submission of the form - no need for JS here (see https://stackoverflow.com/a/51507806/1917092) #}
             <button type="submit" disabled style="display: none" aria-hidden="true"></button>
 
             <h2>Customize the private messages</h2>
 
-            {% if errors %}
-                <span class="error"><i class="fas fa-exclamation-triangle"></i> {{ errors|join('<br />') }}</span>
+            {% if not form.vars.valid %}
+            <span class="error">
+                <i class="fas fa-exclamation-triangle"></i>
+                {%  for error in form.vars.errors %}<br>{{ error.message }} {% endfor %}
+            </span>
             {% endif %}
 
             <div class="message-field message-step">
                 <h3>
-                    <label class="control-label" for="message">Write an optional message <span class="message-length">(<span data-length-field="message">{{ message|length }}</span>&nbsp;/&nbsp;800 characters)</span></label>
+                    <label class="control-label" for="message">Write an optional message <span class="message-length">(<span
+                                    data-length-field="message">{{ message|length }}</span>&nbsp;/&nbsp;800 characters)</span></label>
                 </h3>
 
                 <p>
@@ -25,7 +33,9 @@
                     or a <strong>price limit</strong>!
                 </p>
 
-                <textarea name="message" id="message" rows="5">{{ message }}</textarea>
+                {{ form_widget(form.message, {
+                    'attr': {'id': 'message', 'rows': '5', 'data-field': 'message', 'style': 'resize: none;'}
+                }) }}
             </div>
 
             <div class="user-field message-step">
@@ -48,21 +58,30 @@
                                 1: 'A food allergy ;',
                                 2: 'Or whatever you want ...',
                             } %}
-                            {% for user in availableUsers %}
-                                {% if user.identifier in selectedUsers %}
-                                    <label class="user-item notes" for="note-{{ user.identifier }}">
-                                        <span class="user-column">
-                                            <span class="user-data">
-                                                {% block user_item %}{% endblock %}
-                                            </span>
-                                            <span class="note-length">
-                                                <span data-length-field="note-{{ user.identifier }}">{{ notes[user.identifier]|default('')|length }}</span>&nbsp;/&nbsp;400 characters
-                                            </span>
+                            {% for userId in selectedUsers %}
+                                {% set user = availableUsers[userId] %}
+                                <label class="user-item notes" for="note-{{ user.identifier }}">
+                                    <span class="user-column">
+                                        <span class="user-data">
+                                            {% block user_item %}{% endblock %}
                                         </span>
-                                        <input id="note-{{ user.identifier }}" name="notes[{{ user.identifier }}]" value="{{ notes[user.identifier]|default('') }}" type="text" {% if key in input_placeholders|keys %}placeholder="{{ input_placeholders[key] }}"{% endif %} />
-                                    </label>
-                                    {% set key = key + 1 %}
-                                {% endif %}
+                                        <span class="note-length">
+                                            <span data-length-field="{{ user.identifier }}">{{ notes[user.identifier]|default('')|length }}</span>&nbsp;/&nbsp;400 characters
+                                        </span>
+                                    </span>
+
+                                    {% if key in input_placeholders|keys %}
+                                        {{ form_widget(form['notes-' ~ userId], { 'attr': {
+                                            'placeholder': input_placeholders[key],
+                                            'data-field': user.identifier
+                                        }}) }}
+                                    {% else %}
+                                        {{ form_widget(form['notes-' ~ userId],  { 'attr': {
+                                            'data-field': user.identifier
+                                        }}) }}
+                                    {% endif %}
+                                </label>
+                                {% set key = key + 1 %}
                             {% endfor %}
                         </div>
                     </div>
@@ -107,79 +126,82 @@
                     </small>
                 </p>
             </div>
-        </form>
+        {{ form_end(form) }}
     </div>
 
     <script type="text/javascript" nonce="{{ csp_nonce('script') }}">
-      /**
-       * I did know this is a global and I feel bad.
-       * Next time I will install 10mb of npm and react javascript to switch a flag :)
-       *
-       * @type {boolean}
-       */
-      let secretSantaFormSubmitted = false;
-      const runForm = document.getElementById('run_form');
-      const message = document.getElementById('message');
-      const fieldLengths = document.querySelectorAll('[data-length-field]');
-      const submitButton = document.getElementById('submit-button');
+        /**
+         * I did know this is a global and I feel bad.
+         * Next time I will install 10mb of npm and react javascript to switch a flag :)
+         *
+         * @type {boolean}
+         */
+        let secretSantaFormSubmitted = false;
+        const runForm = document.getElementById('run_form');
+        const message = document.getElementById('message');
+        const fieldLengths = document.querySelectorAll('[data-length-field]');
+        const submitButton = document.getElementById('submit-button');
 
-      /**
-       * Prevent the multi-submit of the form
-       */
-      runForm.addEventListener('submit', function(e) {
-        if (secretSantaFormSubmitted) {
-          e.preventDefault();
-        } else {
-          secretSantaFormSubmitted = true;
-          submitButton.disabled = true;
-          submitButton.children[0].className = 'fas fa-hourglass-start';
-        }
-      }, false);
-
-      function updateFieldLength(field, fieldLength) {
-        fieldLength.innerHTML = field.value.trim().replace('\r\n', '\n').length;
-      }
-
-      fieldLengths.forEach(function(fieldLength) {
-        const field = document.getElementById(fieldLength.getAttribute('data-length-field'))
-
-        field.addEventListener('keyup', function() { updateFieldLength(field, fieldLength) });
-        updateFieldLength(field, fieldLength);
-      });
-
-      /**
-       * Handle sample message send
-       */
-      const sampleMessageButton = document.getElementById('sample-message-button');
-      if (sampleMessageButton) {
-        sampleMessageButton.addEventListener('click', function(e) {
-          const body = new FormData(runForm);
-
-          fetch('{{ url('send_sample_message', {application: application}) }}', {
-            method: 'post',
-            credentials: 'include',
-            headers: {'X-Requested-With': 'XMLHttpRequest'},
-            body: body,
-          })
-            .then(function(response) {
-              return response.json();
-            })
-            .then(function(response) {
-              if (response.success) {
-                window.alert('We have sent you a fake message. Check it now before finishing the Secret Santa.');
-                return;
-              }
-
-              const keys = Object.keys(response.errors);
-              let message = 'Error when sending the fake message:\n';
-
-              for (let i=0; i<keys.length; i++) {
-                message += response.errors[keys[i]] + "\n";
-              }
-
-              window.alert(message);
-            })
+        /**
+         * Prevent the multi-submit of the form
+         */
+        runForm.addEventListener('submit', function (e) {
+            if (secretSantaFormSubmitted) {
+                e.preventDefault();
+            } else {
+                secretSantaFormSubmitted = true;
+                submitButton.disabled = true;
+                submitButton.children[0].className = 'fas fa-hourglass-start';
+            }
         }, false);
-      }
+
+        /**
+         * Handle sample message send
+         */
+        const sampleMessageButton = document.getElementById('sample-message-button');
+        if (sampleMessageButton) {
+            sampleMessageButton.addEventListener('click', function (e) {
+                const body = new FormData(runForm);
+
+                fetch('{{ url('send_sample_message', {application: application}) }}', {
+                    method: 'post',
+                    credentials: 'include',
+                    headers: {'X-Requested-With': 'XMLHttpRequest'},
+                    body: body,
+                })
+                    .then(function (response) {
+                        return response.json();
+                    })
+                    .then(function (response) {
+                        if (response.success) {
+                            window.alert('We have sent you a fake message. Check it now before finishing the Secret Santa.');
+                            return;
+                        }
+
+                        const keys = Object.keys(response.errors);
+                        let message = 'Error when sending the fake message:\n';
+
+                        for (let i = 0; i < keys.length; i++) {
+                            message += response.errors[keys[i]] + "\n";
+                        }
+
+                        window.alert(message);
+                    })
+            }, false);
+        }
+
+        function updateFieldLength(field, fieldLength) {
+            fieldLength.innerHTML = field.value.trim().replace('\r\n', '\n').length;
+        }
+
+        window.addEventListener('load', function () {
+            fieldLengths.forEach(function (fieldLength) {
+                const field = document.querySelector('[data-field=' + fieldLength.getAttribute("data-length-field") + ']')
+                field.addEventListener('keyup', function () {
+                    updateFieldLength(field, fieldLength)
+                });
+                updateFieldLength(field, fieldLength);
+            });
+        })
     </script>
 {% endblock santa_content %}
