--- a/templates/santa/participants.html.twig
+++ b/templates/santa/participants.html.twig
@@ -7,12 +7,18 @@
     <div class="run-block">
         <h2>Select the participants of your Secret Santa</h2>
 
-        {% if errors %}
-            <span class="error"><i class="fas fa-exclamation-triangle"></i> {{ errors|join('<br />') }}</span>
+        {% if not form.vars.valid %}
+            <span class="error">
+            <i class="fas fa-exclamation-triangle"></i>
+            {%  for error in form.vars.errors %}<br>{{ error.message }} {% endfor %}
+        </span>
         {% endif %}
 
         {% if users|length >= 2 %}
-            <form method="post" id="run_form">
+            {{ form_start(form, {
+                'method': 'POST',
+                'attr': {'id': 'run_form'}
+                }) }}
                 <div class="pure-g">
                     <div class="pure-u-1 pure-u-lg-1-2">
                         <div class="run-column run-column-left">
@@ -56,7 +62,7 @@
                                                 <div class="no-result is-hidden" id="no-user-matching">
                                                     No user matching.
                                                 </div>
-                                                {% for user in users %}
+                                                {% for userForm in form.users %}
                                                     {% block user_item %}{% endblock %}
                                                 {% endfor %}
                                             </div>
@@ -101,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-            </form>
+            {{ form_end(form) }}
 
             <script type="text/javascript" nonce="{{ csp_nonce('script') }}">
                 /**
@@ -144,18 +150,19 @@
                  */
                 function updateSummary() {
                     const users = userList.querySelectorAll('.user-item input:checked');
+
                     let html = '';
 
                     if (users.length > 0) {
                         for(let i=0; i<users.length; i++) {
-                            html += users[i].dataset.summary;
+                            html += users[i].parentElement.dataset.summary;
                         }
                     } else {
                         html = 'No user selected';
                     }
 
-                    summaryCount.innerHTML = users.length + ' people';
-                    checkedUsersSummary.innerHTML = html;
+                    summaryCount.innerHTML = users.length + (users.length <= 1 ?' person' : ' people');
+                    checkedUsersSummary.innerHTML = html
                 }
 
                 /**
@@ -303,7 +310,7 @@
                     const userIds = e.target.getAttribute('data-user-ids').split('|');
 
                     for(let i=0; i<userIds.length; i++) {
-                        const userInput = document.getElementById('user-' + userIds[i]);
+                        const userInput = document.querySelector('[data-identifier="' + userIds[i] + '"');
 
                         if (userInput) {
                             userInput.checked = true;
@@ -314,7 +321,7 @@
                 }
 
                 /**
-                 * Here lives Damien's Kingdom
+                 * Here lies Damien's Kingdom
                  */
                 function removeDiacritics (str) {
                     const defaultDiacriticsRemovalMap = [
