--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
 
         <link rel="stylesheet" href="{{ asset('style.css') }}">
         <link rel="stylesheet" href="{{ asset('fontawesome/css/all.css') }}">
+        {% block stylesheets %}{% endblock %}
 
         {% if 'production' == bugsnag_release_stage and bugsnag_api_key is not empty %}
             <script src="{{ asset('js/bugsnag.min.js') }}"></script>
